# turing-vs-scherbius

./: .gitignore  Cargo.toml  Dockerfile  README.md  TODO  config.json  deploy.sh  deployv2.sh  main.rs  pyproject.toml  setup.py  test.py  test_docker.sh
nts_player/: README.md  player.py  utils.py
scripts/: runner.py  test.py  train.py
src/: encrypt.rs  enigma.rs  lib.rs  main.rs  players.rs  user_input.rs  utils.rs
terraform/: artifact_registry.tf  cloud_run.tf  providers.tf  terraform.tfstate  terraform.tfvars  variables.tf
ts_game/: README.md  cards.py  main.py  render.py  test.py  tvs.py  utils.py
tvs_core/: Cargo.toml  Makefile  README.md  config.json  pyproject.toml  pytest.ini
tvs_core/src/: README.md  enigma.rs  game_config.rs  game_logic.rs  game_state.rs  game_types.rs  lib.rs  players.rs  utils.rs
tvs_core/tests/: test_bindings.py
tvs_core/tests/python/: test_basic.py
tvs_flask/: README.md  TODO  app.py  main.py  manager.py  old.py  test_tvs_flask_app.py  utils.py
tvs_flask/static/: script.js  style.css
tvs_flask/templates/: index.html
tvs_flask/tests/: conftest.py  test_manager.py  test_utils.py
tvs_pygame/: README.md  render.py  tvs.py
tvs_pygame/tests/: test_render.py
tvs_rl_player/: TODO  agent.py  env.py  network.py  players.py
tvs_rl_player/tests/: test_env.py  test_network.py
