[package]
name = "turing_vs_scherbius"
version = "0.1.0"
edition = "2021"

[lib]
name = "turing_vs_scherbius"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rand = "0.8.3"
serde_json = "1.0.89"
serde = {version = "1.0.151", features = ["derive"] }
pyo3 = { version = "0.20.2", features = ["extension-module", "macros"] }
