[package]
name = "tvs_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "tvs_core"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rand = { version = "0.8.5", features = ["serde1"] } # Or your current rand version, e.g., "0.8"
serde_json = "1.0.89"
serde = { version = "1.0.193", features = ["derive", "rc"] } # Or your current serde version, e.g., "1.0"
pyo3 = { version = "0.20.2", features = ["extension-module", "macros"] }
rand_chacha = { version = "0.3.1", features = ["serde1"] } # Add this line