[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "turing-vs-scherbius"
version = "0.1.0"
description = "A game based on the Turing vs Scherbius historical cryptographic conflict"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment :: Simulation",
]

# Python dependencies (if any)
dependencies = [
    # e.g., "numpy>=1.20.0"
]

[project.urls]
"Homepage" = "https://github.com/yourusername/turing-vs-scherbius"
"Bug Tracker" = "https://github.com/yourusername/turing-vs-scherbius/issues"

[tool.maturin]
python-source = "python"  # If you have Python modules
bindings = "pyo3"